# AshybulakStroy_chat_LLM_Proxy

./: .env.example  .gitignore  CHAT_LOG_2026-04-01_16-38-05.md  CHAT_TRANSCRIPT_2026-04-01_16-38-05.md  DEVELOPMENT_PLAN.md  LICENSE  P2P_SUBPROJECT_SPEC.md  PROGRESS.md  PROVIDER_LIMITS.md  README.md  TECHNICAL_SPECIFICATION.md  TECH_SPEC.md  admin_dashboard_cache.json  invalid_resources.json  model_validation_snapshot.json  provider_limits.json  pyproject.toml  rate_limits_snapshot.json  requirements.txt  run.py  start_server.bat  start_server.ps1
.github/workflows/: python-app.yml
app/: admin_ui.py  audio_transcription.py  config.py  main.py  p2p_admin_ui.py  p2p_service.py  rate_limits.py  router_service.py  routes.py  schemas.py
app/providers/: __init__.py  base.py  cloudflare_provider.py  openai_provider.py
tests/: test_audio_transcriptions.py  test_routing_quality.py
