[project]
name = "ashybulakstroy_ai_hub"
version = "0.1.0"
description = "AshybulakStroy AI HUB is a scalable FastAPI gateway for OpenAI-compatible LLM requests with unified chat, embeddings and model routing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "proxy", "router", "openai", "fastapi"]
authors = [
  { name = "LLM Proxy Team" }
]

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
httpx = "^0.26.0"
pydantic = "^2.7.0"
python-dotenv = "^1.1.0"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
